# classification

./: .pre-commit-config.yaml  README.md  iris_data.json  pyproject.toml  visualize.py
.github/workflows/: ml_app-ci.yml
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/autoapi/: index.doctree
docs/_build/.doctrees/autoapi/ml_app/: index.doctree
docs/_build/.doctrees/autoapi/ml_app/__main__/: index.doctree
docs/_build/.doctrees/autoapi/ml_app/inference/: index.doctree
docs/_build/.doctrees/autoapi/ml_app/train/: index.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/ml_app/: inference.html  train.html
docs/_build/_sources/: index.rst.txt
docs/_build/_sources/autoapi/: index.rst.txt
docs/_build/_sources/autoapi/ml_app/: index.rst.txt
docs/_build/_sources/autoapi/ml_app/__main__/: index.rst.txt
docs/_build/_sources/autoapi/ml_app/inference/: index.rst.txt
docs/_build/_sources/autoapi/ml_app/train/: index.rst.txt
docs/_build/autoapi/: index.html
docs/_build/autoapi/ml_app/: index.html
docs/_build/autoapi/ml_app/__main__/: index.html
docs/_build/autoapi/ml_app/inference/: index.html
docs/_build/autoapi/ml_app/train/: index.html
ml_app/: __main__.py  inference.py  train.py
tests/: test_ml_app.py
