[tool.poetry]
name = "classification"
version = "0.1.0"
description = "Machine Learning Model Deployment for Iris Classification"
authors = ["Soyoung Yoon <soyyoon16@gmail.com>"]
packages = [{ include = "ml_app" }] 
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.5.2"
umap-learn = "^0.5.6"
plotly = "^5.24.1"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
sphinx = "6.1.0"
sphinx-autoapi = "^3.3.1"
sphinx-rtd-theme = "^2.0.0"
pre-commit = "^3.8.0"
black = "^24.8.0"
ruff = "^0.6.7"
myst-nb = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
